--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 .sdk{
-    background-image: url(./assets/Card.jpg);
+    background-image: url(./assets/Card.webp);
     background-size: cover;
 }
 .ibg{
-    background-image: url(./assets/Machine.png);
+    background-image: url(./assets/Machine.webp);
     background-size: cover;
 }
